<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_divide"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button_divide"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/button_mc" />

    <Button
        android:id="@+id/button9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button9"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button_m" />

    <Button
        android:id="@+id/button_coma"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button_coma"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button0"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button4"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button5"
        />


    <Button
        android:id="@+id/button1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@id/button_coma"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4" />


    <Button
        android:id="@+id/button7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button7"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_root" />

    <Button
        android:id="@+id/button8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button8"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button_square" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button9" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button_minus"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button_multiply" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_equal"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button_divide" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button_equal"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button5"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button3"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        />

    <Button
        android:id="@+id/button0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button_coma"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/button2"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:autofillHints=""
        android:contentDescription="@string/editText1"
        android:ems="10"
        android:hint="@string/editText1"
        android:importantForAccessibility="auto"
        android:inputType="number|numberDecimal"
        android:labelFor="@+id/editText1"
        app:layout_constraintBottom_toTopOf="@id/button_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,LabelFor" />

    <Button
        android:id="@+id/button_root"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:text="@string/button_root"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button_square"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        />

    <Button
        android:id="@+id/button_square"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:text="@string/button_square"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button_m"
        app:layout_constraintStart_toEndOf="@id/button_root"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        />

    <Button
        android:id="@+id/button_mc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:text="@string/button_mc"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_m"
        app:layout_constraintTop_toBottomOf="@id/editTextText" />

    <Button
        android:id="@+id/button_m"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:text="@string/button_m"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@id/button_mc"
        app:layout_constraintStart_toEndOf="@id/button_square"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>